# intro-book-python

./: .gitignore  404.html  ANALYSIS.md  PUBLISHING_SETUP.md  README.md  SOLUTIONS_STATUS.md  book.toml  build.py  index.html  nomenclature.html  print.html  pyproject.toml  searcher-c2a407aa.js  toc-a1d46b57.js  toc.html
.archive/: hash collision.py  numpy_unique_args_permutations.py  sets.py  unpacking tuples.py
book/: SUMMARY.md  front_matter.md  nomenclature.md
concepts/: dag.html  dag.md  glossary.html  glossary.md
tools/: audit_links.sh
trunk/: 01_the_machine_model.html  01_the_machine_model_solutions.html  02_numbers_and_how_they_fit.html  02_numbers_and_how_they_fit_solutions.html  03_the_vec_is_a_table.html  03_the_vec_is_a_table_solutions.html  04_cost_and_budget.html  04_cost_and_budget_solutions.html  05_identity_is_an_integer.html  05_identity_is_an_integer_solutions.html  06_a_row_is_a_tuple.html  06_a_row_is_a_tuple_solutions.html  07_structure_of_arrays.html  07_structure_of_arrays_solutions.html  08_where_theres_one_theres_many.html  08_where_theres_one_theres_many_solutions.html  09_sort_breaks_indices.html  09_sort_breaks_indices_solutions.html  10_stable_ids_and_generations.html  10_stable_ids_and_generations_solutions.html  11_the_tick.html  11_the_tick_solutions.html  12_event_time_vs_tick_time.html  12_event_time_vs_tick_time_solutions.html  13_system_as_function.html  13_system_as_function_solutions.html  14_systems_compose_into_a_dag.html  14_systems_compose_into_a_dag_solutions.html  15_state_changes_between_ticks.html  19_ebp_dispatch.html  (+57 more)
(+113 files in other folders)
